# LLDBAdapter

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  INTELLIJ_INTEGRATION.md  MISSING_IMPLEMENTATIONS.md  PROJECT_SUMMARY.md  README.md  README_zh.md  REDUNDANT_PROTO_FIELDS_REPORT.md  UNIMPLEMENTED_FIELDS_REPORT.md  UNUSED_FILES_REPORT.md  VCPKG_SETUP.md
.github/workflows/: build.yml
cmake/: BuildProtobuf.cmake  BuildProtobufTarget.cmake  CangjieDebuggerConfig.cmake.in  DownloadLLVM.cmake
cmake/toolchains/: linux-amd64.cmake  linux-arm64.cmake  macos-amd64.cmake  macos-arm64.cmake  windows-amd64.cmake
cmake/toolchains/native/: linux-amd64.cmake  linux-arm64.cmake  macos-amd64.cmake  macos-arm64.cmake  windows-amd64.cmake
docs/: CROSS_COMPILE.md  PROTO_USAGE_CN.md
include/cangjie/debugger/: BreakpointManager.h  DebuggerClient.h  Logger.h  ProtoConverter.h  TcpClient.h
schema/: event.proto  model.proto  request.proto  response.proto
scripts/: linux-amd64-to-arm64.sh
src/: main.cpp
src/client/: DebuggerClient.cpp  DebuggerClientEvents.cpp  DebuggerClientHandlers.cpp  DebuggerClientResponse.cpp  DebuggerClientUtils.cpp  TcpClient.cpp
src/core/: BreakpointManager.cpp
src/protocol/: ProtoConverter.cpp
src/utils/: Logger.cpp
